resources/vimff.css
/* Copied over from vimium project */
div.vimffReset,
span.vimffReset,
{
    background: none !important;
    border: none !important;
    bottom: auto !important;
    box-shadow: none !important;
    color: black !important;
    cursor: auto !important;
    display: inline !important;
    float: none !important;
    font-family : "Helvetica Neue", "Helvetica", "Arial", sans-serif !important;
    font-size: inherit !important;
    font-style: normal !important;
    font-variant: normal !important;
    font-weight: normal !important;
    height: auto !important;
    left: auto !important;
    letter-spacing: 0 !important;
    line-height: 100% !important;
    margin: 0 !important;
    max-height: none !important;
    max-width: none !important;
    min-height: 0 !important;
    min-width: 0 !important;
    opacity: 1 !important;
    padding: 0 !important;
    position: static !important;
    right: auto !important;
    text-align: left !important;
    text-decoration: none !important;
    text-indent: 0 !important;
    text-shadow: none !important;
    text-transform: none !important;
    top: auto !important;
    vertical-align: baseline !important;
    white-space: normal !important;
    width: auto !important;
    z-index: 99999999 !important;
}

div.vimffHintMarker {
    position: absolute !important;
    display: block !important;
    white-space: nowrap !important;
    overflow: hidden !important;
    font-size: 11px !important;
    padding: 0px 3px 0px 3px !important;
    box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.3) !important;
    background-color: #AEDC3A !important;
    border: solid 1px #2B95B0 !important;
    border-radius: 5px !important;
}


div.vimffHintMarker > span {
    color: #303030 !important;
    font-family: Helvetica, Arial, sans-serif !important;
    font-weight: bold !important;
    font-size: 11px !important;
    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.6) !important;
}

div.vimffHintMarker > span.vimffCharMatch {
    color: #FFFFFF !important;
}

